# Server

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak
Project1/: Project1.vcxproj
checkeqemuacid/: CMakeLists.txt  CheckEmuAcid.cpp  CheckEmuAcid.h  EDecrypt.cpp  EDecrypt.h  checkeqemuacid.vcxproj  checkeqemuacid.vcxproj.filters  encryption.cpp  main.cpp
checkeqemuacid/x64/Debug/checkeqemuacid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  checkeqemuacid.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
common/net/: daybreak_connection.cpp  eqstream.cpp
dependencies/perl_x64/: BuildInfo.h  config.h
loginserver/: CMakeLists.txt  CheckEmuAcid.cpp  CheckEmuAcid.h  client.cpp  client.h  database.h  database_mysql.cpp  database_mysql.h  server_manager.cpp
loginserver/login_util/: login.ini
utils/TaskMaster/: EQEmuWxProject.sln  EQEmuWxProject.vcxproj  EQEmuWxProject.vcxproj.filters  UpgradeLog.htm
win10x64build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EQEmu.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
win10x64build/client_files/: INSTALL.vcxproj  INSTALL.vcxproj.filters
win10x64build/common/: INSTALL.vcxproj  INSTALL.vcxproj.filters  common.vcxproj  common.vcxproj.filters
win10x64build/eqlaunch/: INSTALL.vcxproj  INSTALL.vcxproj.filters  eqlaunch.vcxproj  eqlaunch.vcxproj.filters
win10x64build/loginserver/: INSTALL.vcxproj  INSTALL.vcxproj.filters  loginserver.vcxproj  loginserver.vcxproj.filters
win10x64build/luabind/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+2 more)
(+43 files in other folders)
