CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(acid_sources
	CheckEmuAcid.cpp
	encryption.cpp
	main.cpp
)

SET(acid_headers
	CheckEmuAcid.h
	encryption.h
)

FIND_PACKAGE(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

ADD_EXECUTABLE(CheckEmuAcid ${acid_sources} ${acid_headers})

INSTALL(TARGETS CheckEmuAcid RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

TARGET_LINK_LIBRARIES(CheckEmuAcid ${SERVER_LIBS} ${OPENSSL_LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
